# PatientX.AI

./: .gitignore  BERTopicModel.py  ClusteringModel.py  ClusteringModelInterface.py  GITHUB.md  LDAModel.py  README.md  RUN_INSTRUCTIONS.md  WHY_TMUX.md  config.yaml  data_sampling_topic_modeling.py  data_sampling_topic_modeling_2.py  env.yaml  interact_with_mistral.py  pyproject.toml  requirements.txt  run.py
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: standard.yaml
data/: DATA_FORMAT.md  README.md
data/test_data/: randomfile.txt
data/test_data/fail/: sample_csv_incorrectstructure.csv
data/test_data/pass/: sample_csv.csv
existing_code/: existing_topic_modeling.ipynb  legacy_Data_sempling_topic_modeling.r  octis_lda_topic_modeling.py
methodology_findings/: BERTopic.md  LDA.md  running_mistral_locally.md  visualisation.md
python-notebooks/: MistralNotebook_README.md  MistralRepresentation.py  Run_LLM_on_server_how_to.md  bertopic.ipynb  interact_with_mistral.py  octis_lda.ipynb  ollama_no_root_install.md
script/: install.sh
src/: BERTopicModel.py  ClusteringModelInterface.py  LDAModel.py  llm_utils.py
src/PatientX/: MistralRepresentation.py  RepresentationModel.py  run.py  run_llm_on_bertopic_results.py  utils.py
src/PatientX/models/: BERTopicModel.py  LDAModel.py  MistralRepresentation.py
tests/: test_run.py
