[build-system]
requires = ["setuptools >= 75.8.0", "wheel >= 0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "PatientX"
version = "0.1.0"

license = { text = "MIT" }

readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "bertopic>=0.16.4",
    "spacy>=3.8.0",
    "typer ~= 0.9",
    "typer-config[yaml]>=1.4.2",
    "openai >= 1.65.5"
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.3.4",
    "pyfakefs ~= 5.7",
    "pytest-xdist >= 3.6.1",
]

[project.scripts]
my_tool = "repo.run:main"

[project.urls]
# NOTE: these links must be updated when transferring ownership
Homepage = "https://github.com/gt-sse-center/PatientX.AI"
Documentation = "https://github.com/gt-sse-center/PatientX.AI"
Repository = "https://github.com/gt-sse-center/PatientX.AI"
